# calidhayte

./: .env  .gitignore  Pipfile  README.md  makefile  pyproject.toml  report.html  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/.github/workflows/: tests.yml
.github/workflows/: tests.yml
docs/: calidhayte.html  index.html  search.js
docs/calidhayte/: calibrate.html  coefficients.html  graphs.html  results.html  summary.html
notebooks/: shaptest.ipynb
src/calidhayte/: __init__.py  calibrate.py  coefficients.py  graphs.py  prepare.py  results.py  summary.py
tests/: test_calibrate.py  test_coefficients.py  test_graphs.py  test_results.py  test_summary.py
