[metadata]
name = calidhayte
version = 0.0.1
description = Calibrate one signal against a reference value using one or more variables
author = Idris Hayward
license = Lesser General Public License v2.1
license_files = LICENSE
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
keywords = calibration, errors, slope, offset, deviation

[options]
packages = 
	calidhayte
python_requires >= 3.9
package_dir = 
	=src
install_requires = 
zip_safe = no
	

[options.extras_require]
testing =
	pytest>=6.0
	pytest-cov>=2.0
	pytest-html>=3.2
	mypy>=0.910
	flake8>=3.9
	tox>=3.24

[options.package_data]
calidhayte = py.typed

[flake8]
max-line-length = 80
per-file-ignores = */__init__.py: F401
